--- a/Style/style.css
+++ b/Style/style.css
@@ -171,6 +171,10 @@ button {
     transform: translate(-50%, -50%);
 }
 
+#toggle-hourly-weather img {
+    transition: transform .5s;
+}
+
 .weather-box {
     position: relative;
     margin-bottom: 15px;
@@ -201,6 +205,7 @@ button {
 /* ======= Daily Weather Container ======= */
 #daily-weather-wrapper {
     background-color: rgba(000, 000, 000, 0.6);
+    transition: opacity 0.5s;
 }
  
 /* ======= Hourly Weather Container ======= */
